# surma.dev

./: .eleventy.js  .gitattributes  .gitignore  .htmlnanorc.js  .parcelrc  CNAME  LICENSE.md  README.md  _config.yml  about.md  big-cached-function.js  bower.json  config.json  devserver.js  expiring-cache.js  fs-helpers.js  full-build.sh  gallery-helpers.js  gobox.html  gulpfile.babel.js  gulpfile.js  gulppipelines.babel.js  hugoconf.json  impressum.md  index.html  index.md  index2.html  lfs-bucket.js  netlify.toml  notes.html  package-lock.json  package.json  render-string.js  rollup.config.js  s3conf.json  search.html  serve.sh  server.js  sitemap.xml  vite.config.js
+/: index.html
11ty-plugins/: preview-img.js
_data/: author.js  colors.js  layout.js  meta.js  staging.js
_includes/: aside.html  default.ejs  footer.html  galleryphoto.11ty.js  header.html  lab.ejs  listing.ejs  photography.ejs  (+2 more)
static/things/js-to-asc/: .gitignore  Cargo.toml  README.md  _intel.csv  bench.js  binaryheap.js  binaryheap.rs  binaryheap_asc_bench.js  binaryheap_cpp_bench.js  binaryheap_customarray.ts  binaryheap_idiomatic.cpp  binaryheap_idiomatic.rs  binaryheap_idiomatic_cpp.js  binaryheap_js_bench.js  binaryheap_naive.ts  binaryheap_optimized.rs  binaryheap_optimized.ts  blur.js  blur_asc_bench.js  blur_js_bench.js  blur_naive.ts  blur_optimized.ts  bubblesort.js  bubblesort_asc_bench.js  bubblesort_js_bench.js  bubblesort_naive.ts  bubblesort_optimized.ts  data-table.css  data-table.mjs  filesizes.csv  package.json  results.csv  run_benchmark.sh  sanitizer.js  tsconfig.json
(+692 files in other folders)
