[package]
name = "binaryheap"
version = "0.1.0"
authors = ["Surma <surma@surma.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
path = "binaryheap.rs"

[profile.release]
lto = true

[dependencies]
wee_alloc = "0.4.5"

[features]
idiomatic = []
optimized = []